[new] added snow effect [fix] navbar collapse [fix] changed body font to roboto in main.less

--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,6 @@
 @main: #27ae60;
 @main-dark: #207f3b;
 
-@import url(http://fonts.googleapis.com/css?family=Armata);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic);
 
 @font-face
@@ -13,7 +12,7 @@
 body {
   padding-top:60px;
   /*background-color:#ebebeb;*/
-  /*font-family: NewNeue;*/
+  font-family: Roboto;
   /*overflow-y: hidden;*/
   overflow-x:hidden;
   //color:#ffffff;
@@ -91,7 +90,7 @@ body {
 .navbar .navbar-brand{
   font-size:25px;
   margin-top:3px;
-  font-family:Armata;
+  font-family:Roboto;
   color:#ffffff;
   max-width: none;
   img {
